--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
+  background: #202039;
 }
 
 body {
