--- a/style.css
+++ b/style.css
@@ -1,26 +1,39 @@
-/* Cascating Style Sheet */
+@keyframes bounce {
+  0%,
+  20%,
+  60%,
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-7px);
+    transform: translateY(-7px);
+  }
+
+  60% {
+    _webkit-transform: translateY(-7px);
+    transform: translateY(-7px);
+  }
+}
+
 * {
   margin: 0;
 }
+
 html,
 body {
   --grey: #e1e1e6;
   --black: #202024;
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'JetBrains Mono', sans-serif;
   -webkit-font-smoothing: antialiased;
-  background: #202039;
-}
-
-body {
   display: grid;
   place-items: center;
 }
 
 main {
-  background: url(imagens/Mobile.png);
-  width: 375px;
-  height: 812px;
+  background: url(imagens/background.svg) no-repeat center/cover;
 }
 
 .conteiner {
@@ -47,12 +60,11 @@ main {
   width: 10rem;
   height: 11.5rem;
   object-fit: cover;
-
   clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   margin-top: 1.5rem;
 }
 
@@ -63,7 +75,6 @@ a {
   display: flex;
   gap: 0.75rem;
   justify-content: center;
-  align-items: center;
 }
 
 p {
@@ -71,20 +82,80 @@ p {
 }
 
 ul {
-  margin-top: 4rem;
+  margin-top: 5rem;
   list-style: none;
   padding: 0;
   display: flex;
   gap: 0.5rem;
   justify-content: center;
 }
+li a img:hover {
+  transition: 0.3s;
+  border-radius: 40%;
+  filter: contrast(110%);
+  border-color: #ff006a;
+  animation: bounce 0.6s;
+  border-style: inset;
+}
+li a img {
+  border-style: inset;
+  border-radius: 40%;
+  border-color: orange;
+}
 
-.mouseAnime {
+@media (max-width: 425px) {
+  main {
+    width: 100vw;
+    min-height: 812px;
+    height: 100vw;
+  }
+}
+
+@media (min-width: 428px) {
+  body {
+    background-color: var(--black);
+    background-image: url(imagens/Desktop.svg);
+    background-position: center;
+  }
+
+  main {
+    background: url(imagens/mask.svg);
+    width: 358px;
+    height: 540px;
+    left: 541px;
+    top: 140px;
+    box-shadow: 0rem 0.7rem 1rem rgba(0, 0, 0, 0.452);
+  }
+
+  .avatar {
+    margin: 4.5rem auto 0;
+  }
+
+  ul {
+    margin-top: 2.5rem;
+  }
+}
+
+.faixa {
   position: relative;
-  top: -25px;
-  left: -35px;
-  width: 500px;
-  height: auto;
-  display: block;
-  z-index: 999;
+  z-index: 1;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50px;
+  height: 170px;
+  background: linear-gradient(161.24deg,rgb(255, 0, 179) -15.25%, rgb(255, 217, 0) 111.89%);
+  top: -650px;
+  box-shadow: 4px 4px 7px var(--black);
+}
+
+.cabo{
+  position: relative;
+  z-index: 1;
+  background-color:rgba(0, 0, 0, 0.959);
+  border-radius: 12%;
+  width: 60px;
+  height:15px;
+  top: -473px;
+  margin-left: auto;
+  margin-right: auto;
 }
