--- a/style.css
+++ b/style.css
@@ -109,6 +109,12 @@ li a img {
     min-height: 812px;
     height: 100vw;
   }
+  .cabo{
+    display: none;
+  }
+  .faixa{
+    display: none;
+  }
 }
 
 @media (min-width: 428px) {
