--- a/style.css
+++ b/style.css
@@ -103,16 +103,16 @@ li a img {
   border-color: orange;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 428px) {
   main {
     width: 100vw;
     min-height: 812px;
     height: 100vw;
   }
-  .cabo{
+  .cabo {
     display: none;
   }
-  .faixa{
+  .faixa {
     display: none;
   }
 }
@@ -121,7 +121,7 @@ li a img {
   body {
     background-color: var(--black);
     background-image: url(imagens/Desktop.svg);
-    background-position: center;
+    background-position: top;
   }
 
   main {
@@ -147,21 +147,54 @@ li a img {
   z-index: 1;
   margin-left: auto;
   margin-right: auto;
-  width: 50px;
+  width: 60px;
   height: 170px;
-  background: linear-gradient(161.24deg,rgb(255, 0, 179) -15.25%, rgb(255, 217, 0) 111.89%);
+  background: linear-gradient(
+    161.24deg,
+    rgb(255, 0, 179) -15.25%,
+    rgb(255, 217, 0) 111.89%
+  );
   top: -650px;
   box-shadow: 4px 4px 7px var(--black);
 }
 
-.cabo{
+.cabo {
   position: relative;
   z-index: 1;
-  background-color:rgba(0, 0, 0, 0.959);
+  background-color: rgba(0, 0, 0, 0.959);
   border-radius: 12%;
-  width: 60px;
-  height:15px;
+  width: 70px;
+  height: 15px;
   top: -473px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.avatar span {
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: rotate;
+  -moz-animation-duration: 2s;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+}
+
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes rotate {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(360deg);
+  }
 }
