--- a/style.css
+++ b/style.css
@@ -93,21 +93,22 @@ li a img:hover {
   transition: 0.3s;
   border-radius: 40%;
   filter: contrast(110%);
-  border-color: #ff006a;
+  border-color: #ff008e;
   animation: bounce 0.6s;
   border-style: inset;
 }
 li a img {
   border-style: inset;
   border-radius: 40%;
-  border-color: orange;
+  border-color: #ff7a29;
 }
 
-@media (max-width: 428px) {
+@media (max-width: 500px) {
   main {
     width: 100vw;
     min-height: 812px;
-    height: 100vw;
+    height: 100%;
+    background-color: var(--black);
   }
   .cabo {
     display: none;
@@ -117,11 +118,12 @@ li a img {
   }
 }
 
-@media (min-width: 428px) {
+@media (min-width: 500px) {
   body {
     background-color: var(--black);
     background-image: url(imagens/Desktop.svg);
     background-position: top;
+    background-repeat: no-repeat;
   }
 
   main {
@@ -143,31 +145,26 @@ li a img {
 }
 
 .faixa {
-  position: relative;
-  z-index: 1;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60px;
-  height: 170px;
   background: linear-gradient(
-    161.24deg,
-    rgb(255, 0, 179) -15.25%,
-    rgb(255, 217, 0) 111.89%
+    105deg,
+    #ff008e 30.24%,
+    #f7ae25 100%,
+    yellow 100%
   );
-  top: -650px;
-  box-shadow: 4px 4px 7px var(--black);
+  width: 90px;
+  height: 740px;
+  position: absolute;
+  margin-top: -45rem;
+  margin-left: 8.9rem;
+  z-index: 2;
 }
-
 .cabo {
-  position: relative;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.959);
-  border-radius: 12%;
-  width: 70px;
-  height: 15px;
-  top: -473px;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  background: #121214;
+  width: 100px;
+  height: 8px;
+  margin-top: 18px;
+  margin-left: 137px;
 }
 
 .avatar span {
@@ -181,6 +178,7 @@ li a img {
   -moz-animation-timing-function: linear;
 }
 
+/* ANIMAÇÃO GIRARTORIA DA LOGO */
 @-webkit-keyframes rotate {
   from {
     -webkit-transform: rotate(0deg);
