--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   --grey: #e1e1e6;
   --black: #202024;
   height: 100%;
-  font-family: 'JetBrains Mono', sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   display: grid;
   place-items: center;
